RESOLVED FIXED292031
AX: Fix for accessibility/password-selected-text-range.html in ITM.
https://bugs.webkit.org/show_bug.cgi?id=292031
Summary AX: Fix for accessibility/password-selected-text-range.html in ITM.
Andres Gonzalez
Reported 2025-04-24 14:46:52 PDT
This test is currently failing in ITM.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-24 14:47:04 PDT
Andres Gonzalez
Comment 2 2025-04-24 14:57:00 PDT
EWS
Comment 3 2025-05-02 10:21:08 PDT
Committed 294435@main (fc5dad73c18c): <https://commits.webkit.org/294435@main> Reviewed commits have been landed. Closing PR #44487 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.