Source/WebCore/accessibility/mac/AXObjectCacheMac.mm
@@ -139,6 +139,8 @@ static AXTextEditType platformEditTypeForWebCoreEditType(WebCore::AXTextEditType
         return kAXTextEditTypeCut;
     case WebCore::AXTextEditTypePaste:
         return kAXTextEditTypePaste;
+    case WebCore::AXTextEditTypeReplace:
+        return kAXTextEditTypeUnknown; // Does not exist in platform enum.
     case WebCore::AXTextEditTypeAttributesChange:
         return kAXTextEditTypeAttributesChange;
     }
@@ -1073,33 +1075,6 @@ std::optional<SimpleRange> rangeForTextMarkerRange(AXObjectCache* cache, AXTextM
     CharacterOffset startCharacterOffset = characterOffsetForTextMarker(cache, startTextMarker.get());
     CharacterOffset endCharacterOffset = characterOffsetForTextMarker(cache, endTextMarker.get());
     return cache->rangeForUnorderedCharacterOffsets(startCharacterOffset, endCharacterOffset);
-}
-
-void AXObjectCache::onSelectedTextChanged(const VisiblePositionRange& selection)
-{
-#if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-    if (auto tree = AXIsolatedTree::treeForPageID(m_pageID)) {
-        if (selection.isNull())
-            tree->setSelectedTextMarkerRange({ });
-        else {
-            auto startPosition = selection.start.deepEquivalent();
-            auto endPosition = selection.end.deepEquivalent();
-
-            if (startPosition.isNull() || endPosition.isNull())
-                tree->setSelectedTextMarkerRange({ });
-            else {
-                if (auto* startObject = get(startPosition.anchorNode()))
-                    createIsolatedObjectIfNeeded(*startObject);
-                if (auto* endObject = get(endPosition.anchorNode()))
-                    createIsolatedObjectIfNeeded(*endObject);
-
-                tree->setSelectedTextMarkerRange({ selection });
-            }
-        }
-    }
-#else
-    UNUSED_PARAM(selection);
-#endif
 }
 
 }
